2006-10-04 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gsc/GSGState.h: Added copying protocol.
	* Headers/cairo/CairoGState.h: Removed duplicated ivars that are
	already defined in the new super class GSGState.
	* Source/cairo/CairoGState.m: Changed to use super class ivars
	where apropriate. Removed all compiler warnings. Changed colour
	setting and getting to work with super class methods. 
	Reimplemented DPSinitmatrix to handle offset and use this from
	everywhere. Removed methods duplicating super class code. 
	* Source/cairo/CairoContext.m (GSWSetViewIsFlipped:): Removed as
	super class implementation should be used.

2006-10-03 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/x11/XWindowBuffer.m: ([_exposeRect:])
	Clip draw area to size of buffer rather than size of wiondow,
	in case the two have become out of sync somehow.
	* Source/win32/WIN32Server.m: Add help key mask
	* Source/x11/XGServerEvent.m: ditto

2006-10-02  Nicola Pero <nicola.pero@meta-innovation.com>

	* configure.ac: Check the new variable GNUSTEP_IS_FLATTENED,
	and default to yes.
	* configure: Regenerated.

2006-09-29 Hans Baier <hansfbaier@googlemail.com>

	* Source/cairo/CairoGState.m: Added hack to retrieve current rgb
	and alpha from cairos internal structures. Will be replaced by proper
	code when the cairo functions are available
	* Source/cairo/CairoGState.m:
	* Headers/cairo/CairoGState.h: refactored class as a subclass of 
	GSGState. Removed all unimplemented methods implemented in the 
	superclass.
	* Headers/cairo/CairoFaceInfo.h: fixed header file to include the
	needed freetype headers
	* Source/cairo/XGCairoGlitzSurface.m: fixed glitz api change
	glitz_glx_find_drawable_format -> 
	glitz_glx_find_drawable_format_for_visual. Compiles now but doesnt
	work yet, because I don't know how to retrieve a proper VisualID.
	someone who knows, please fix it!
	
2006-09-28 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/win32/WIN32Server.m: Use GSBackHandlesWindowDecorations